# linux-mastery-journey

./: CONTRIBUTING.md  README.md  README.md.bak  arch-linux-installation-guide.md  imp_changes.sh  move.sh  progress-tracking-system.md  reorganize-repo.sh
learning_guides/: README.md  README.md.bak  bonus-ai-exercises.md  bonus-ai-integration.md  bonus-mouseless-exercises.md  bonus-mouseless-terminal-centric.md  month-01-base-system.md  month-01-exercises.md  month-01-placeholder.md  month-02-exercises.md  month-02-placeholder.md  month-02-system-config.md  month-03-desktop-setup.md  month-03-exercises.md  month-03-placeholder.md  month-04-exercises.md  month-04-placeholder.md  month-04-terminal-tools.md  month-05-dev-tools.md  month-05-exercises.md  month-05-placeholder.md  month-06-containers.md  month-06-exercises.md  month-06-placeholder.md  month-07-exercises.md  month-07-maintenance.md  month-07-placeholder.md  month-08-exercises.md  month-08-networking.md  month-08-placeholder.md  month-09-automation.md  month-09-exercises.md  month-09-placeholder.md  month-10-cloud.md  month-10-exercises.md  month-10-placeholder.md  month-11-exercises.md  month-11-nixos.md  month-11-placeholder.md  month-12-exercises.md  (+3 more)
projects/system-monitor/: pyproject.toml
projects/system-monitor/docs/: testing_strategy.md
projects/system-monitor/monitor/processors/: resource_processor.py
projects/system-monitor/monitor/ui/: layout_manager.py
projects/system-monitor/monitor/ui/components/: dashboard.tsx
reference/: linux-glossary.md  linux-shortcuts.md
temp/: arch-readme.md  (+22 more)
(+13 files in other folders)
