[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "linux-system-monitor"
version = "1.0.0"
description = "A terminal-based system monitoring tool for Linux"
authors = ["Joshua Michael Hall <your.email@example.com>"]
readme = "README.md"
packages = [{include = "monitor"}]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.5"
py-cpuinfo = "^9.0.0"
blessed = "^1.20.0"
pandas = "^2.0.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
monitor = "monitor.__main__:app"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
